--- a/index.html
+++ b/index.html
@@ -1,10 +1,98 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My One Page Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yoga Anurag Classes</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        header {
+            background-color: #4CAF50; /* Green color */
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+        }
+        nav {
+            margin: 20px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        section {
+            padding: 20px;
+            text-align: center;
+        }
+        footer {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+        .contact {
+            font-size: 1.2em;
+            margin: 20px 0;
+        }
+        .hashtags {
+            margin: 20px 0;
+            font-size: 1.2em;
+        }
+    </style>
 </head>
 <body>
-  <h1>Welcome to My GitHub Pages Website!</h1>
-  <p>This is a simple one-page website hosted on GitHub Pages.</p>
+
+<header>
+    <h1>Welcome to Yoga Anurag Classes</h1>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#classes">Classes</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
+
+<section id="about">
+    <h2>About Us</h2>
+    <p>At Yoga Anurag, we offer a holistic approach to yoga that encompasses physical, mental, and spiritual well-being.</p>
+    <p>Join us for classes that are designed for all levels!</p>
+</section>
+
+<section id="classes">
+    <h2>Our Classes</h2>
+    <p>We offer offline, online, and home sessions. Each session lasts around 45 minutes, 5 days a week.</p>
+    <p>Monthly Fees:</p>
+    <ul>
+        <li>Online: ₹1499</li>
+        <li>Offline: ₹2999</li>
+        <li>Home Sessions: ₹4999</li>
+    </ul>
+</section>
+
+<section id="contact">
+    <h2>Contact Us</h2>
+    <div class="contact">
+        <p>📞 Phone: +91 62832 66268</p>
+    </div>
+    <div class="hashtags">
+        <p>Join us on social media! <br> #YogaAnurag #YogaClasses #Wellness #Mindfulness</p>
+    </div>
+</section>
+
+<footer>
+    <p>Follow us on Instagram, Twitter, YouTube, and Facebook: @yogaanurag</p>
+</footer>
+
 </body>
 </html>
