--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
         <p>Join us on social media! <br> #YogaAnurag #YogaClasses #Wellness #Mindfulness</p>
     </div>
 </section>
+    
+    <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="#classes">Classes</a>
+    <a href="#contact">Contact</a>
+    </nav>
+    
 
 <footer>
     <p>Follow us on Instagram, Twitter, YouTube, and Facebook: @yogaanurag</p>
