--- a/pages.html
+++ b/pages.html
@@ -1,1 +1,7 @@
-https://ragasea.github.io/yoga/ai.html
+
+
+&nbsp;|&nbsp;<a href="https://ragasea.github.io/yoga/ai.html" target="_blank">https://ragasea.github.io/yoga/ai.html</a>&nbsp;|&nbsp;&nbsp;<a href="https://ragasea.github.io/yoga/intro.html" target="_blank">intro</a>&nbsp;|
+
+
+other links
+&nbsp;|&nbsp;<a href="https://www.instagram.com/yogaanurag/" target="_blank">Insta</a>&nbsp;|&nbsp;&nbsp;<a href="https://www.facebook.com/yogaanurag" target="_blank">Fb</a>&nbsp;|
