--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="#classes">Classes</a>
+    <a href="site.html">Site</a>
     <a href="#contact">Contact</a>
     </nav>
     
